cleaded up the restaurant modal, improved restaurant grid, added button tags

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -8,7 +8,7 @@
   min-width: 800px;
 }
 
-.modalforrestaurant {
+/*.modalforrestaurant {
   background-color: $pop-background;
   border-radius: 5px;
   border-style: none;
@@ -16,7 +16,7 @@
   box-shadow: $shadow;
   border: none;
   min-width: 800px;
-}
+}*/
 
 .modal-backdrop
 {
