--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Modal -->
   <div class="modal animate__animated animate__fadeIn animate__faster" id="restaurantModal<%= index %>" tabindex="-1" aria-labelledby="restaurantModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable border border-0 border-rounded-3" style="transform: translate(-25%);">
-      <div class="modal-content">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable " style="transform: translate(-25%);">
+      <div class="modal-content restaurant-modal">
 
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel"></h5>
@@ -13,27 +13,34 @@
             <!-- 1. Title / Review Button -->
             <div class="row">
               <div class="col restaurant-headline"><%= restaurant.name %></div>
+              <div class="col d-grid gap-2 ">
+                <button class="btn btn-primary restaurant-review" type="button">Write a Review</button>
+              </div>
             </div>
 
             <!-- 2. Tags / Dashboard -->
             <div class="row">
               <div class="col">
-                <div class="container-fluid">
-                  <div class="row">
+                <div class="container restaurant-tag-container">
+                  
                     <!-- Renders dishes that are made in that restaurant -->
                     <% restaurant.dishes.each do |dish| %>
-                      <div class="col restaurant-tags"><%= dish.name %></div>
+                      <div class="col">
+                      <button class="btn btn-sm restaurant-tags" type="button">
+                        <%= dish.name %>
+                      </button>
+                      </div>
                     <% end %>
 
-                  </div>
                 </div>
               </div>
+
+              <!-- Dashboard -->
               <div class="col">
                 <div class="container-fluid restaurant-dashboard-container">
-                  <div class="row">
+                  <div class="row"> 
                     <div class="col">
                       <div class="restaurant-dashboard-title">HOURS</div>
-
                         <!-- Validating if a restaurant is open -->
                         <% week = restaurant.openings %>
                         <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
