added a profile page for users with favorite dishes & favorite restaurants

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -7,21 +7,25 @@
           <h2 class="font-weight-bold mx-4" id="dishModalLabel"><%= dish.name %></h2>
           <p><%= dish.country %></p>
            <!-- Doesnt take the myid as 87 -->
-          
+
           <% dish.restaurants.each do |restaurant| %>
             <%= restaurant.name %>
           <% end %>
-        
-      </div>
-      </div>
-      <div class="modal-body-new">
-        <img src=<%= dish.image_url %> alt=<%= dish.name %> class="">
-        <div class="description">
-          <p> <%= dish.description %> </p>
-        </div>
 
       </div>
+
+      </div>
+        <div class="modal-body-new">
+          <img src=<%= dish.image_url %> alt=<%= dish.name %> class="">
+          <div class="description">
+            <p> <%= dish.description %> </p>
+          </div>
+
+        </div>
       <div class="modal-footer">
+        <%= link_to dish_favorite_path(dish) do  %>
+          <%= image_tag("icon_heart.png", class: "restaurant-button-icon") %>
+        <% end %>
         <%= link_to "Find restaurants that make #{dish.name}", restaurants_path(dish: dish.name, dish_picture: dish.image_url), class: "btn btn-link" %>
       </div>
     </div>
