--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -13,7 +13,7 @@
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                             <% if user_signed_in? %>
                             <li><%= link_to "Home", "#", class: "dropdown-item" %></li>
-                            <li><%= link_to "Messages", "#", class: "dropdown-item" %></li>
+                            <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
                             <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
                             <% else %>
                             <li><%= link_to "Login", new_user_session_path, class: "dropdown-item" %></li>
