--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,23 @@
-<h2>Favorite Restaurants</h2>
-<div>
+<h1><%= "#{@user.firstname} #{@user.lastname}" %></h1>
+
+<h4 class='mt-4'>Favorite Restaurants</h4>
+<div class='mt-4'>
   <% @user.favorite_restaurants.each do |favorite| %>
   <ul>
-  <li><%= favorite.restaurant.name %></li>
-  <%= link_to "Delete #{favorite.restaurant.name}",
-            restaurant_favorite_path(favorite.restaurant.id, favorite_id: favorite.id),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
+    <li><%= favorite.restaurant.name %> (<%= favorite.restaurant.address %>) -- <%= link_to "🗑",
+              restaurant_favorite_path(favorite.restaurant.id, favorite_id: favorite.id),
+              method: :delete %></li>
   </ul>
   <% end %>
 </div>
 
-<h2>Favorite dishes</h2>
-<div>
+<h4 class='mt-4'>Favorite dishes</h4>
+<div class='mt-4'>
   <% @user.favorite_dishes.each do |favorite| %>
   <ul>
-  <li><%= favorite.dish.name %></li>
-    <%= link_to "Delete #{favorite.dish.name}",
-            dish_favorite_path(favorite.dish.id, favorite_id: favorite.id),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
+    <li><%= favorite.dish.name %> -- <%= link_to "🗑",
+              dish_favorite_path(favorite.dish.id, favorite_id: favorite.id),
+              method: :delete%></li>
   </ul>
   <% end %>
 </div>
