--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,11 +1,15 @@
 <h1>Add a Restaurant</h1>
-<div class="restaurant_form">
+<div class="restaurant_form" data-controller="new-restaurant">
   <%= simple_form_for(@restaurant) do |f| %>
     <%= f.input :name, required: true %>
     <%= f.input :address, required: true, hint: "Enter the street and city" %>
     <%= f.input :telephone, required: true, hint: "exp. +49 30 0000 000" %>
     <%= f.input :website, required: true, hint: "www.sample.com" %>
-    <%= f.input :address, as: :country %>
+    <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
+
+      <%= simple_fields_for :other do |o| %>
+       <%= o.input :country, as: :country, label: 'Where are your dishes from?', input_html: {data:{new_restaurant_target: 'input', action: 'change->new-restaurant#fetchCountry'}} %>
+       <% end %>
     <%= f.submit %>
   <% end %>
 </div>
