--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,7 +6,11 @@
 
           <input type="text" autocomplete="off" class="banner-dish sebis" id="tonys" value="<%= params[:dish].present? ? "#{params[:dish]}" : 'Dish' %>">
           <form action="/restaurants" autocomplete="off">
-            <input id="dan_input" name="location" type="text" value="<%= params[:location].present? ? "#{params[:location]}" : 'Location' %>">
+            <% if params[:location].present? %>
+              <input id="dan_input" name="location" type="text" value="<%= "#{params[:location]}" %>">
+            <% else %>
+              <input id="dan_input" name="location" type="text" placeholder='Add your location' autofocus>
+            <% end %>
             <%= hidden_field_tag :dish, params[:dish] %>
             <%= hidden_field_tag :dish_picture, params[:dish_picture] %>
             <button hidden type="submit">Search</button>
